# python-documentation-archives

./: LICENSE  README.md  pyproject.toml
scripts/: download-all.py
