[tool.poetry]
name = "python-doc-version"
version = "0.1.0"
license = "MIT"
readme = "README.md"
description = "archives of the python docs"
authors = ["Steven Kalt"]
include = [
    "README.md",
    "pyproject.toml",
    "LICENSE"
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.22.0"
lxml = "^4.4.2"
cssselect = "^1.1.0"

[tool.poetry.dev-dependencies]
isort = "^4.3.21"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
